# jellyconfig

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.MD
.github/workflows/: ci.yml
src/: jellyfin_exporter.rs  jellyfin_importer.rs  main.rs  utils.rs
